Update Producer/Consumer, save transactions via consumer, publish history events, index transactions for search, implement GraphQL requests